# smashq

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml
Softwareprozess/: arc42-specification.md
docs/: developer-doc.html
docs/design-system/: README.md  SKILL.md  colors_and_type.css
e2e/: gen-design-doc.spec.ts
perf/: README.md  baseline.frontend.json  baseline.rust.txt
src/: App.test.tsx  App.tsx  DetachedViewApp.tsx  DiffWindowApp.tsx  LogWindowApp.test.tsx  LogWindowApp.tsx  index.css  main.tsx  whatsNew.test.ts  whatsNew.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: parsers.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  log_reader.rs  main.rs  prerequisites.rs  settings.rs  structured_log.rs  util.rs  validation.rs
src-tauri/src/github/: auth.rs  commands.rs  mod.rs  project.rs
src-tauri/src/session/: commands.rs  diff.rs  ics_export.rs  manager.rs  mod.rs  win_job.rs  worktree.rs
src-tauri/src/session/file_reader/: commands.rs  mod.rs  path_safety.rs  session_delete.rs  session_discovery.rs  session_history.rs
src-tauri/tests/: jsonl_watcher_integration.rs  session_diff.rs  session_discovery.rs
src/hooks/: useAutoUpdate.test.ts  useAutoUpdate.ts  useCollapsibleResize.test.tsx  useCollapsibleResize.ts  useDraggableWindow.test.ts  useDraggableWindow.ts  useGitBranch.test.ts  useGitBranch.ts  useNowTick.test.ts  useSessionRestore.integration.test.ts  useSessionRestore.test.ts  useSessionRestore.ts  useThemeEffect.test.ts  useThemeEffect.ts  useWhatsNew.test.ts  useWhatsNew.ts
src/protocols/: schema.ts
src/store/: configDiscoveryStore.test.ts  editorStore.ts  (+27 more)
tasks/: lessons.md  todo.md
(+282 files in other folders)
