[package]
name = "smashq"
version = "1.0.24"
description = "Smashq - Manage and monitor Claude CLI sessions"
authors = ["ARO-LABS"]
license = "MIT"
repository = "https://github.com/ARO-LABS/smashq"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smashq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
log = "0.4"
env_logger = "0.11"
regex = "1"
dirs = "6"
tokio = { version = "1", features = ["rt"] }
tauri-plugin-clipboard-manager = "2"
trash = "5"

# Windows-only: Job Object API for crash-safe cascading process cleanup.
# Wraps spawned PTY children so the kernel kills them when the App-Prozess
# dies, even on Force-Kill / Panic where the CloseRequested-Handler never
# runs. See src/session/win_job.rs.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",          # required by CreateJobObjectW signature
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

# Performance baseline — `cargo bench` runs the criterion harness in
# `src-tauri/benches/`. `harness = false` hands `main()` to criterion instead
# of libtest. Does not affect `cargo test`, `cargo check`, or the release build.
[[bench]]
name = "parsers"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
